expense-app/main/default/objects/Re_fuel_Entry__c/Re_fuel_Entry__c.object-meta.xml
<CustomObject>
    <label>Re-fuel Entry</label>
    <nameField>
        <displayFormat>RF-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Re-fuel Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>