expense-app/main/default/objects/Re_fuel_Entry__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Auto-calculated price based on price per litre and how many litres filled</description>
    <formula>Litres__c *  Price_per_litre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>