expense-app/main/default/objects/Re_fuel_Entry__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <inlineHelpText>Auto-calculated. Don&apos;t need to enter any information here.</inlineHelpText>
    <label>Efficiency (km/l)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>