expense-app/main/default/objects/Re_fuel_Entry__c/fields/Price_per_litre__c.field-meta.xml
<CustomField>
    <fullName>Price_per_litre__c</fullName>
    <label>Price per litre</label>
    <precision>18</precision>
    <required>true</required>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>