expense-app/main/default/objects/Re_fuel_Entry__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Re-fuel Entries</relationshipLabel>
    <relationshipName>Re_fuel_Entries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>