expense-app/main/default/objects/Re_fuel_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Litres__c</columns>
    <columns>Price_per_litre__c</columns>
    <columns>Odometer__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Efficiency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>