expense-app/main/default/objects/Re_fuel_Entry__c/listViews/EZE33K.listView-meta.xml
<ListView>
    <fullName>EZE33K</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Litres__c</columns>
    <columns>Price_per_litre__c</columns>
    <columns>Odometer__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Efficiency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vehicle__c</field>
        <operation>equals</operation>
        <value>EZE33K</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2023</value>
    </filters>
    <label>EZE33K</label>
</ListView>